[refs #00116] Fix responsive version of footer nav
@ishanivardhan spotted that the footer’s mini nav wasn’t looking too hot
on smaller screens; entirely my fault! All fixed now.

--- a/components/page-footer/_components.page-footer.scss
+++ b/components/page-footer/_components.page-footer.scss
@@ -34,16 +34,13 @@
   .c-page-footer__nav-item {
     display: inline-block;
     padding-right: $global-spacing-unit-small;
-    padding-left: $global-spacing-unit-small;
+    margin-right: $global-spacing-unit-small;
     border-right: 1px solid $color-page-footer-nav;
 
-    &:first-child {
-      padding-left: 0;
-    }
-
     &:last-child {
-      padding-right: 0;
+      margin-right: 0;
       border-right: none;
+      padding-right: 0;
     }
 
     /**
